--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="cabeçalho">
     <h1>PIMENTINHA</h1>
-    <img src="" alt="">
+    <img src="https://i0.wp.com/files.agro20.com.br/uploads/2019/08/pimenta-biquinho-2.jpg?fit=1024%2C576&ssl=1" alt="">
   </header>
   
   
