--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <section>
 <b class="titulo_apresentaçao_trabalho"> Sobre o trabalho:</b>
 <p>Olá, me chamo Agatha Aiko e sou aluna da turma do 2°C no Colégio Estadual Duque de Caxias.</p>
-<p>Estou utilizando essa página HTML para criar um site sobre os projetos da pimenta biquinho que estamos trabalhando com a Prof. Ana Maria na matéria de Biotecnologia.</p>
+<p>Estou utilizando essa página HTML para criar um artigo sobre os projetos da pimenta biquinho que estamos trabalhando com a Prof. Ana Maria na matéria de Biotecnologia.</p>
 </section>
 <img class="imagem_arvore" src="arvore.png" alt="Imagem de árvore de pimenta">
 </section>
