--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="cabeçalho">
-<img class="cabeçalho_imagem" src="fundo_pimenta.jpeg" alt="foto de fundo com várias pimentas vermelhas">
-<h1 class="cabeçaho_titulo">PIMENTINHA</h1>
-<ul>
-<li class="cabeçalho_lista_item">Desenvolvimento da Planta</li>
-<li class="cabeçalho_lista_item">Artigos Científicos</li>
-</ul>
+    <header class="cabeçalho">
+        <img class="cabeçalho_imagem" src="pimenta-biquinho-2.webp" alt="foto de fundo com várias pimentas vermelhas">
+        <h1 class="cabeçaho_titulo">PIMENTINHA</h1>
+        <ul>
+       <li class="cabeçalho_lista_item">Desenvolvimento da Planta</li>
+       <li class="cabeçalho_lista_item">Artigos Científicos</li>
+    </ul>
 </header>
 <section class="apresentaçao_trabalho">
-<section>
-<b class="titulo_apresentaçao_trabalho"> Sobre o trabalho:</b>
-<p>Olá, me chamo Agatha Aiko e sou aluna da turma do 2°C no Colégio Estadual Duque de Caxias.</p>
-<p>Esou utilizando essa página HTML para criar um artigo sobre os projetos da pimenta biquinho que estamos trabalhando com a Prof. Ana Maria na matéria de Biotecnologia.</p>
-</section>
-<img class="imagem_arvore" src="arvore.png" alt="Imagem de árvore de pimenta">
+    <section>
+        <b class="titulo_apresentaçao_trabalho"> Sobre o trabalho:</b>
+        <p>Olá, me chamo Agatha Aiko e sou aluna da turma do 2°C no Colégio Estadual Duque de Caxias.</p>
+        <p>Esou utilizando essa página HTML para criar um artigo sobre os projetos da pimenta biquinho que estamos trabalhando com a Prof. Ana Maria na matéria de Biotecnologia.</p>
+    </section>
+    <img class="imagem_arvore" src="pimentabiquinho2c.jpeg" alt="Imagem de árvore de pimenta">
 </section>
 
 </body>
